# kres

./: .gitignore  CLAUDE.md  Cargo.toml  NEWS.md  README.md  setup.sh
.githooks/: pre-commit
configs/: fast-code-agent.json  main-agent.json  mcp.json  settings.json  slow-code-agent-opus.json  slow-code-agent-sonnet.json  todo-agent.json
configs/prompts/: bug-summary-markdown.md  bug-summary.md  condense-task.system.md  fast-code-agent.system.md  main-agent.system.md  review-template.md  slow-code-agent-coding.system.md  slow-code-agent-generic.system.md  slow-code-agent.system.md  todo-agent.system.md  triage-template.md
docs/: action-allowlist.md  agents.md  cli.md  coding-tasks.md  commands.md  configuration.md  development.md  findings-json-format.md  findings.md  prompt-json-format.md  response-json-format.md  review-prompts.md  review-template.md  semcode.md  summary.md  turns-and-follow.md
kres/: Cargo.toml
kres-agents/: Cargo.toml
kres-agents/examples/: parse_lens.rs
kres-agents/src/: config.rs  consolidate.rs  embedded_prompts.rs  error.rs  fetcher.rs  followup.rs  goal.rs  lib.rs  main_agent.rs  mcp_fetcher.rs  merge.rs  pipeline.rs  promote.rs  prompt.rs  prompt_file.rs  response.rs  skills.rs  symbol.rs  todo_agent.rs  tools.rs  user_commands.rs
kres-agents/src/prompts/: consolidator.txt  goal.txt  merger.txt  merger_system.txt  promote.txt  promote_system.txt  todo.txt
kres-core/: Cargo.toml
kres-core/src/: consent.rs  cost.rs  findings.rs  io.rs  lens.rs  lib.rs  log.rs  mode.rs  plan.rs  session_state.rs  shrink.rs  shutdown.rs  task.rs  todo.rs
kres-llm/: Cargo.toml
kres-llm/src/: client.rs  config.rs  error.rs  key.rs  lib.rs  model.rs  proxy.rs  rate_limit.rs  request.rs  stream.rs
kres-mcp/: Cargo.toml
kres-mcp/src/: client.rs  config.rs  error.rs  lib.rs  message.rs  transport.rs
kres-repl/: Cargo.toml
kres-repl/src/: commands.rs  export.rs  lib.rs  report.rs  session.rs  settings.rs  status.rs  summary.rs  tui.rs
kres/src/: main.rs  turn.rs
scripts/: export-README.md  findings-index.py
skills/: kernel.md
